tests/fixtures/invalid/pow_dict_int_none.py
# Cannot call pow() with Dict[str, int], Int, None
x = pow({"a": 1}, 1, None)
